constructed first stable design